fix: fixes main nav borders on mobile layout

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -319,14 +319,13 @@ a {
         margin-bottom: var(--size-xxl);
     }
 
-    .main-nav__list > li:first-of-type,
-    .main-nav__list > li:nth-of-type(2) {
-        border-top: 0.05rem solid var(--clr-acc);
+    .main-nav__list > li:nth-of-type(3),
+    .main-nav__list > li:last-of-type {
+        border-top: unset;
     }
 
-    .main-nav__list > li:first-of-type,
-    .main-nav__list > li:nth-of-type(3) {
-        border-right: 0.05rem solid var(--clr-acc);
+    .main-nav__list > li:nth-of-type(2) {
+        border-right: unset;
     }
 
     .main-nav__list > li {
